# dns-parser

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  README.rst  build.rs  index.html  search-index.js  vagga.yaml
dns_parser/: OptRecord.t.html  QueryClass.t.html  RRData.t.html  enum.Class.html  enum.Error.html  enum.Opcode.html  enum.QueryClass.html  enum.QueryType.html  enum.RRData.html  enum.ResponseCode.html  enum.Type.html  index.html  sidebar-items.js  struct.Builder.html  struct.Header.html  struct.Name.html  struct.OptRecord.html  struct.Packet.html  struct.Question.html  struct.ResourceRecord.html  struct.SoaRecord.html
dns_parser/enums/: QueryType.t.html  ResponseCode.t.html
dns_parser/rrdata/: enum.RRData.html
dns_parser/structs/: SoaRecord.t.html  struct.OptRecord.html  struct.SoaRecord.html
examples/: sync_tcp_client.rs  sync_udp_client.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/fmt/: trait.Debug.js  (+1 more)
quick_error/: struct.Context.html  trait.ResultExt.html
src/: builder.rs  enums.rs  error.rs  header.rs  lib.rs  name.rs  parser.rs  rr.rs  rrdata.rs  structs.rs
src/dns_parser/: builder.rs.html  enums.rs.html  error.rs.html  header.rs.html  lib.rs.html  name.rs.html  parser.rs.html  rrdata.rs.html  structs.rs.html
src/quick_error/: lib.rs.html
src/rdata/: a.rs  aaaa.rs  all.rs  axfr.rs  caa.rs  cname.rs  config.rs  hinfo.rs  https.rs  maila.rs  mailb.rs  mb.rs  mf.rs  mg.rs  minfo.rs  mod.rs  mr.rs  mx.rs  ns.rs  nsec.rs  null.rs  opt.rs  ptr.rs  soa.rs  srv.rs  svcb.rs  txt.rs  wks.rs
(+4 files in other folders)
