[package]
name = "dns-parser"
description = """
    Pure-rust DNS protocol parser library. This does not support network, only
    raw protocol parser.
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["dns", "domain", "name", "parser"]
homepage = "http://github.com/tailhook/dns-parser"
version = "0.3.1"
authors = ["paul@colomiets.name"]

[dependencies]
quick-error = "1.0.0"
byteorder = "0.4"
matches = "0.1.2"

[dev-dependencies]

[lib]
name = "dns_parser"
path = "src/lib.rs"
