[package]
name = "dns-parser"
description = """
    Pure-rust DNS protocol parser library. This does not support network, only
    raw protocol parser.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["dns", "domain", "name", "parser"]
categories = ["parser-implementations"]
homepage = "https://github.com/tailhook/dns-parser"
documentation = "https://docs.rs/dns-parser"
version = "0.7.1"
authors = ["paul@colomiets.name"]

[dependencies]
quick-error = "1.0.0"
byteorder = "1"

[dev-dependencies]
matches = "0.1.2"

[lib]
name = "dns_parser"
path = "src/lib.rs"
